# kitty-os

./: Cargo.toml  README.md
.cargo/: config
docs/: 01-begin-start.md  02-implete-println.md
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
