[package]
name = "kitty-os"
version = "0.1.0"
authors = ["wangju <wangju@shein.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"
volatile = "0.3.0"
spin = "0.9.0"
x86_64 = "0.14.0"
uart_16550 = "0.2.12"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33         # (0x10 << 1) | 1
# 测试方式执行的时长设置
test-timeout = 300
